--- a/data/spells/evocation-01-g1eY1vN44mgluE33.htm
+++ b/data/spells/evocation-01-g1eY1vN44mgluE33.htm
@@ -1,7 +1,6 @@
 Name: Charged Javelin
-Nom: Javelot chagé
-État: changé
-État d'origine: libre
+Nom: Javelot chargé
+État: libre
 
 ------ Description (en) ------
 <p><span>You fire a javelin of electricity that leaves a charged field around its target. Make a spell attack roll. The javelin deals 1d6 electricity damage and 1 persistent electricity damage. <br /></span></p>
@@ -13,10 +12,10 @@ Nom: Javelot chagé
 <p><strong>Heightened (+1)</strong> The initial damage increases by 1d6, and the Persistent Damage increases by 1.</p>
 ------ Description (fr) ------
 <p>Vous lancez un javelot d'électricité qui laisse un champ électrique autour de sa cible.</p>
-<p>Faites une attaque de sort. Le javelot inflige 1d6 dégâts d'électricité et 1 dégât d'électricité persistant.</p>
-<p>Tant que la cible subit des @Compendium[pf2e.conditionitems.lDVqvLKA6eF3Df60]{Dégâts persistants} provenant de ce sort, les créatures obtiennent un bonus de statut de +1 aux jets d'attaque avec des armes en métal ou des effets d'électricité contre la cible et la cible subit une pénalité de statut de -1 aux jets contre les effets d'électricité.</p>
+<p>Faites une attaque de sort. Le javelot inflige [[/r 1d6 #électricité]] dégâts d'électricité et 1 dégât d'électricité persistant.</p>
+<p>Tant que la cible subit des @Compendium[pf2e.conditionitems.lDVqvLKA6eF3Df60]{Dégâts persistants} provenant de ce sort, les créatures obtiennent un bonus de statut de +1 aux jets d'attaque avec des armes en métal ou des effets d'électricité contre la cible et la cible subit une pénalité de statut de -1 aux jets de sauvegarde contre les effets d'électricité.</p>
 <hr />
-<p><strong>Succès critique</strong> Le javelot inflige double dégâts, à la fois pour le dégâts initiaux et les dégâts persistants.4</p>
+<p><strong>Succès critique</strong> Le javelot inflige double dégâts, à la fois pour le dégâts initiaux et les dégâts persistants.</p>
 <p><strong>Succès</strong> Le javelot inflige la totalité des dégâts.</p>
 <hr />
 <p><strong>Intensifié (+1)</strong> Les dégâts initiaux augmentent de 1d6 et les dégâts persistants augmentent de 1.</p>
