--- a/data/spells/evocation-01-ho1jSoYKrHUNnM90.htm
+++ b/data/spells/evocation-01-ho1jSoYKrHUNnM90.htm
@@ -1,7 +1,6 @@
 Name: Tempest Surge
 Nom: Onde de tempête
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You surround a foe in a swirling storm of violent winds, roiling clouds, and crackling lightning. The storm deals 1d12 electricity damage. The target must attempt a basic Reflex save. On a failure, the target also is @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Clumsy 2} for 1 round and takes 1 persistent electricity damage.</p>
@@ -9,6 +8,6 @@ Nom: Onde de tempête
 <p><strong>Heightened (+1)</strong> The initial damage increases by 1d12, and the persistent electricity damage on a failure increases by 1.</p>
 ------ Description (fr) ------
 <p>Vous plongez un adversaire dans une tempête de vents violents et tourbillonnants, de nuages agités et d’éclairs crépitants.</p>
-<p>La tempête inflige 1d12 dégâts d’électricité. La cible doit faire un jet de Réflexes basique. En cas d’échec, elle est également @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroite} 2 pendant 1 round et subit 1 dégât d’électricité persistant.</p>
+<p>La tempête inflige [[r /1d12 #électricité]] dégâts d’électricité. La cible doit faire un jet de Réflexes basique. En cas d’échec, elle est également @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroite} 2 pendant 1 round et subit 1 dégât d’électricité persistant.</p>
 <hr />
-<p><strong>Intensifié (+1)</strong> Les dégâts initiaux augmentent de 1d12 et les dégâts d’électricité persistants en cas d’échec de 1.</p>
+<p><strong>Intensifié (+1)</strong> Les dégâts initiaux augmentent de [[r /1d12]] et les dégâts d’électricité persistants en cas d’échec de 1.</p>
