--- a/data/spells/evocation-01-iAnpxrLaBU4V6Sej.htm
+++ b/data/spells/evocation-01-iAnpxrLaBU4V6Sej.htm
@@ -1,15 +1,13 @@
 Name: Tidal Surge
 Nom: Raz-de-marée
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You call forth a tremendous wave to move the target either in a body of water or on the ground. The target must attempt a Fortitude save.</p>
 <hr /><strong>Failure</strong> You move the target 5 feet in any direction along the ground or 10 feet in any direction through a body of water.
 <p><strong>Critical Failure</strong> You move the target up to 10 feet in any direction along the ground or 20 feet in any direction through a body of water.</p>
 ------ Description (fr) ------
-<p>Vous faites appel à une vague immense pour déplacer la cible saoit dans un plan d’eau soit sur le sol.</p>
-<p>La cible doit faire un jet de Vigueur.</p>
+<p>Vous invoquez une vague immense pour déplacer la cible soit dans un plan d’eau soit sur le sol. La cible doit faire un jet de Vigueur.</p>
 <hr />
 <p><strong>Échec</strong> Vous déplacez la cible de 1,5 m dans n’importe quelle direction sur le sol ou de 3 m dans n’importe quelle direction dans un plan d’eau.</p>
 <p><strong>Échec critique</strong> Vous déplacez la cible jusqu’à 3 m dans n’importe quelle direction sur le sol ou 6 m dans n’importe quelle direction dans un plan d’eau.</p>
