--- a/data/spells/evocation-01-jfVCuOpzC6mUrf6f.htm
+++ b/data/spells/evocation-01-jfVCuOpzC6mUrf6f.htm
@@ -1,7 +1,6 @@
 Name: Hydraulic Push
 Nom: Poussée hydraulique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You call forth a powerful blast of pressurized water that bludgeons the target and knocks it back. Make a ranged spell attack roll.</p>
@@ -11,10 +10,9 @@ Nom: Poussée hydraulique
 <hr />
 <p><strong>Heightened (+1)</strong> The damage increases by 2d6.</p>
 ------ Description (fr) ------
-<p>Vous créez une éruption d’eau pressurisée qui asperge violemment la cible et la repousse.</p>
-<p>Effectuez un jet d’attaque de sort à distance.</p>
+<p>Vous créez une éruption d’eau pressurisée qui asperge violemment la cible et la repousse. Effectuez un jet d’attaque de sort à distance.</p>
 <hr />
-<p><strong>Succès critique</strong> La cible subit 6d6 dégâts contondants et elle est repoussée de 3 m.</p>
-<p><strong> Succès </strong> La cible subit 3d6 dégâts contondants et elle est repoussée de 1,50 m.</p>
+<p><strong>Succès critique</strong> La cible subit [[r/ 6d6 #contondant]] dégâts contondants et elle est repoussée de 3 m.</p>
+<p><strong> Succès </strong> La cible subit [[r/ 3d6 #contondant]] dégâts contondants et elle est repoussée de 1,50 m.</p>
 <hr />
 <p><strong> Intensifié (+1)</strong> Les dégâts augmentent de 2d6.</p>
