--- a/data/spell-effects/01-rnu7tqMPe3Qm0apj.htm
+++ b/data/spell-effects/01-rnu7tqMPe3Qm0apj.htm
@@ -5,4 +5,4 @@ Nom: Effet : Frappe ki (Feu)
 ------ Description (en) ------
 <p>Granted by @Compendium[pf2e.spells-srd.ZL8NTvB22NeEWhVG]{Ki Strike} if you have @Compendium[pf2e.feats-srd.BU4NBIBkVZxdWLLH]{Elemental Fist} and selecting fire.</p>
 ------ Description (fr) ------
-<p>Accordée par @Compendium[pf2e.spells-srd.ZL8NTvB22NeEWhVG]{Frappe ki} si vous avez @Compendium[pf2e.feats-srd.BU4NBIBkVZxdWLLH]{{Poing élémentaire} et que vous sélectionnez Feu.</p>
+<p>Accordée par @Compendium[pf2e.spells-srd.ZL8NTvB22NeEWhVG]{Frappe ki} si vous avez @Compendium[pf2e.feats-srd.BU4NBIBkVZxdWLLH]{{Poing élémentaire} et en sélectionnant Feu.</p>
