--- a/data/spell-effects/02-F4DTpDXNu5IliyhJ.htm
+++ b/data/spell-effects/02-F4DTpDXNu5IliyhJ.htm
@@ -1,5 +1,5 @@
 Name: Spell Effect: Animal Form (Deer)
-Nom: Effet : Forme animale
+Nom: Effet : Forme animale (Cerf)
 État: libre
 
 ------ Description (en) ------
