--- a/data/spell-effects/02-BT1ofB6RvRocQOWO.htm
+++ b/data/spell-effects/02-BT1ofB6RvRocQOWO.htm
@@ -49,8 +49,8 @@ Nom: Effet : Forme animale (Taureau)
 <li><strong>Corps à corps</strong> Corne, <strong>Dégâts</strong> 2d8 perforants.</li>
 </ul>
 <hr />
-<p><strong>Intensifié (3e)</strong> Vous gagnez à la place 10 PV temporaires, CA = 17 + votre niveau, modificateur d'attaque +14, bonus aux dégâts +5, et modificateur d'Athlétisme +14.</p>
+<p><strong>Intensifié (3e)</strong> Vous gagnez 10 PV temporaires, CA = 17 + votre niveau, modificateur d'attaque +14, bonus aux dégâts +5, et modificateur d'Athlétisme +14.</p>
 <p><strong>Intensifié (4e)</strong> Votre taille de combat est Grand et vos attaques ont une portée de 3 mètres. Vous devez disposer d'un espace suffisant pour vous étendre, sinon le sort est perdu. À la place, vous gagnez 15 points de vie temporaires, une CA de 18 + votre niveau, un modificateur d'attaque de +16, un bonus aux dégâts de +9 et un modificateur d'Athlétisme de +16</p>
-<p><strong>Intensifié (5e)</strong> Votre taille de combat est Très Grand et vos attaques ont une portée de 4,50 mètres. Vous devez disposer d'un espace suffisant pour vous étendre, sinon le sort est perdu. À la place, vous gagnez 20 points de vie temporaires, une CA = 18 + votre niveau, un modificateur d'attaque +18, un bonus aux dégâts de +7 et le double du nombre de dés de dégâts, ainsi qu'un modificateur d'Athlétisme de +20.</p>
+<p><strong>Intensifié (5e)</strong> Votre taille de combat est Très grand et vos attaques ont une portée de 4,5 mètres. Vous devez disposer d'un espace suffisant pour vous étendre, sinon le sort est perdu. À la place, vous gagnez 20 points de vie temporaires, une CA = 18 + votre niveau, un modificateur d'attaque +18, un bonus aux dégâts de +7 et le double du nombre de dés de dégâts, ainsi qu'un modificateur d'Athlétisme de +20.</p>
 <hr />
 <p><em>Remarque : pour accentuer cet effet, importez-le dans votre répertoire d'objets et modifiez le niveau avant de l'ajouter à la cible</em></p>
