--- a/data/spell-effects/04-0Cyf07wboRp4CmcQ.htm
+++ b/data/spell-effects/04-0Cyf07wboRp4CmcQ.htm
@@ -35,10 +35,10 @@ Nom: Effet : Forme de dinosaure (Ankylosaure)
 <p>Vous pouvez décider du type d'animal spécifique, mais cela n'a aucun effet sur la Taille ou les statistiques de la forme. Lorsque vous êtes sous cette forme, vous gagnez les traits de l'animal et du dinosaure. Vous pouvez annuler le sort.</p>
 <p>Vous gagnez les statistiques et capacités suivantes, quelle que soit la forme de combat que vous choisissez :</p>
 <ul >
-<li>AC = 18 + votre niveau. Ignorez la pénalité de contrôle et la réduction de vitesse de votre armure.</li>
+<li>CA = 18 + votre niveau. Ignorez la pénalité de contrôle et la réduction de vitesse de votre armure.</li>
 <li>15 points de vie temporaires.</li>
-<li>Vision en basse lumière et odorat imprécis à 9 mètres.</li>
-<li>Une ou plusieurs attaques au corps à corps, sans arme spécifique à la forme de combat que vous choisissez, qui sont les seules attaques que vous pouvez utiliser. Vous'êtes entraîné à les utiliser. Votre modificateur d'attaque est de +16, et votre bonus de dégâts est de +9. Ces attaques sont basées sur la Force (pour les besoins de la condition @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli}, par exemple). Si votre modificateur d'attaque à mains nues est plus élevé, vous pouvez l'utiliser à la place.</li>
+<li>Vision nocturne et odorat imprécis à 9 mètres.</li>
+<li>Une ou plusieurs attaques au corps à corps, à mains nues spécifique à la forme de combat que vous choisissez, qui sont les seules attaques que vous pouvez utiliser. Vous êtes entraîné à les utiliser. Votre modificateur d'attaque est de +16, et votre bonus de dégâts est de +9. Ces attaques sont basées sur la Force (pour les besoins de la condition @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli}, par exemple). Si votre modificateur d'attaque à mains nues est plus élevé, vous pouvez l'utiliser à la place.</li>
 <li>Modificateur d'Athlétisme de +18, sauf si votre propre modificateur est plus élevé.</li>
 </ul>
 <p>Vous gagnez également des capacités spécifiques en fonction de la forme que vous choisissez :</p>
@@ -47,9 +47,9 @@ Nom: Effet : Forme de dinosaure (Ankylosaure)
 <ul>
 <li>Vitesse 7,50 mètres</li>
 <li><strong>Corps à corps</strong> Queue (rotation arrière, portée 3 mètres), Dégâts 2d6 contondants</li>
-<li><strong>corps à corps</strong> Pied, dégâts 2d6 contondants</li>
+<li><strong>Corps à corps</strong> Pied, dégâts 2d6 contondants</li>
 </ul>
-<hr >
+<hr />
 <p><strong>Intensifié (5e)</strong> Votre forme de combat est Très grande et vos attaques ont une portée de 4,5 mètres, ou de 6 mètres si elles avaient au départ une portée de 4,50 mètres. À la place, vous gagnez 20 PV temporaires, un modificateur d'attaque de +18, un bonus aux dégâts de +6, le double des dés de dégâts, et modificateur d'Athlétisme +21.</p>
 <p><strong>Intensifié (7e)</strong> Votre forme de combat est Gigantesque et vos attaques ont une portée de 6 mètres, ou de 7,50 mètres si elles avaient une portée de 4,50 mètres au départ. À la place, vous gagnez une CA égale à 21 + votre niveau, 25 PV temporaires, un modificateur d'attaque de +25, un bonus aux dégâts de +15, le double des dés de dégâts et un modificateur d'Athlétisme de +25.</p>
 <hr />
