--- a/data/spells/evocation-01-mlNYROcFrUF8nFgk.htm
+++ b/data/spells/evocation-01-mlNYROcFrUF8nFgk.htm
@@ -1,7 +1,6 @@
 Name: Spray of Stars
 Nom: Aspersion d'étoiles
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You fling a spray of tiny shooting stars, dealing 1d4 fire damage. Each creature in the area must attempt a Reflex save.</p>
@@ -18,6 +17,6 @@ Nom: Aspersion d'étoiles
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
 <p><strong>Succès</strong> La créature subit la moitié des dégâts et est @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Éblouie} pendant 1 round.</p>
 <p><strong>Échec</strong> La créature subit la totalité des dégâts et est Éblouie pendant 3 rounds.</p>
-<p><strong>Échec critique</strong> La créature subit le doubledes dégâts est est Éblouie pendant 1 minute.</p>
 <hr />
-<p><strong>Intensifié (+1)</strong>Augmentez les dégâts par [[/r 1d4 #feu]].</p>
+<p><strong>Échec critique</strong> La créature subit le double des dégâts et est Éblouie pendant 1 minute.</p>
+<p><strong>Intensifié (+1)</strong>Augmentez les dégâts de [[/r 1d4 #feu]].</p>
