--- a/data/spells/evocation-02-0qaqksrGGDj74HXE.htm
+++ b/data/spells/evocation-02-0qaqksrGGDj74HXE.htm
@@ -12,11 +12,8 @@ Nom: Poussière scintillante
 <p><strong>Critical Failure</strong> The target is @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Blinded} for 1 round and Dazzled for 10 minutes. Its invisibility is negated for 10 minutes.</p>
 ------ Description (fr) ------
 <p>Une poussière scintillante dessine les contours des créatures de la zone. Chacune fait un jet de Réflexes. Si ce sort annule l’invisibilité d’une créature, elle est @Compendium[pf2e.conditionspf2e.DmAIPqOBomZ7H95W]{masquée} au lieu d’être @Compendium[pf2e.conditionspf2e.zJxUflt9np0q4yML]{invisible}. Cela fonctionne si la créature était déjà invisible ou si elle bénéficie d’un effet d’@Compendium[pf2e.conditionspf2e.zJxUflt9np0q4yML]{invisibilité} avant la fin de la négation d’invisibilité de ce sort.</p>
-<p>
-<hr><b>Succès critique</b> La cible n’est pas affectée.</p>
-<p>
-<b>Succès</b> L’invisibilité de la cible est annulée pour 2 rounds.</p>
-<p>
-<b>Échec</b> La cible est @Compendium[pf2e.conditionspf2e.TkIyaNPgTZFBCCuh]{éblouie} pendant 1 min et son invisibilité annulée pendant 1 min.</p>
-<p>
-<b>Échec critique</b> La créature est @Compendium[pf2e.conditionspf2e.XgEqL1kFApUbl5Z2]{aveuglée} pour 1 round et @Compendium[pf2e.conditionspf2e.TkIyaNPgTZFBCCuh]{éblouie} pendant 10 min. Son invisibilité est annulée pendant 10 min.</p>
+<hr />
+<p><strong>Succès critique</strong> La cible n’est pas affectée.</p>
+<p><strong>Succès</strong> L’invisibilité de la cible est annulée pour 2 rounds.</p>
+<p><strong>Échec</strong> La cible est @Compendium[pf2e.conditionspf2e.TkIyaNPgTZFBCCuh]{Éblouie} pendant 1 minute et son invisibilité annulée pendant 1 minute.</p>
+<p><strong>Échec critique</strong> La créature est @Compendium[pf2e.conditionspf2e.XgEqL1kFApUbl5Z2]{Aveuglée} pendant 1 round et Éblouie pendant 10 minutes. Son invisibilité est annulée pendant 10 minutes.</p>
