--- a/data/spells/evocation-03-LFSwMtQVP05EzlZe.htm
+++ b/data/spells/evocation-03-LFSwMtQVP05EzlZe.htm
@@ -1,7 +1,6 @@
 Name: Thunderburst
 Nom: Explosion tempêtueuse
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You create a powerful blast of air and a loud peal of thunder, dealing 2d6 bludgeoning damage and 2d6 sonic damage. Each creature in the area must attempt a Fortitude save.</p>
@@ -13,7 +12,7 @@ Nom: Explosion tempêtueuse
 <hr />
 <p><strong>Heightened (+2)</strong> Increase each type of damage by 2d6 and the area by 5 feet.</p>
 ------ Description (fr) ------
-<p>Vous créez une puissante explosion d'air et un bruyant retentissement de tonnerre infligeant [[/r 2d6 #contondants]] dégâts contondants et [[/r 2d6 #son]] dégâts de son. Chaque créature dans la zone doit faire un jet de Vigueur.</p>
+<p>Vous créez une puissante explosion d'air et un bruyant coup de tonnerre infligeant [[/r 2d6 #contondants]] dégâts contondants et [[/r 2d6 #son]] dégâts de son. Chaque créature dans la zone doit faire un jet de Vigueur.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
 <p><strong>Succès</strong> La créature subit la moitié des dégâts.</p>
