--- a/data/spells/evocation-03-oo7YcRC2gcez81PV.htm
+++ b/data/spells/evocation-03-oo7YcRC2gcez81PV.htm
@@ -17,13 +17,10 @@ Nom: Explosion Ki
 <p><strong>Heightened (+1)</strong> The damage increases by 1d6, or by [[/r 2d6]] if you use 2 or 3 actions.</p>
 ------ Description (fr) ------
 <p>Vous déchaînez votre ki sous la forme d’une explosion infligeant 2d6 dégâts de force. Si vous utilisez 2 actions pour lancer explosion ki, la taille du cône passe à 9 m et les dégâts à 3d6. Si vous utilisez 3 actions pour lancer explosion ki, la taille du cône passe à 18 m et les dégâts à 4d6. Chaque créature dans la zone doit effectuer un jet de Vigueur.</p>
-<p>
-<hr><b>Succès critique</b> La créature n’est pas affectée.</p>
-<p>
-<b>Succès</b> La créature reçoit la moitié des dégâts.</p>
-<p>
-<b>Échec</b> La créature reçoit la totalité des dégâts et elle est repoussée de 1,50 m.</p>
-<p>
-<b>Échec critique</b> La créature reçoit le double de dégâts et elle est repoussée de 3 m.</p>
-<p>
-<hr><b>Intensifié (+1)</b> Les dégâts augmentent de 1d6, ou 2d6 si vous utilisez 2 ou 3 actions.</p>
+<hr />
+<p><strong>Succès critique</strong> La créature n’est pas affectée.</p>
+<p><strong>Succès</strong> La créature reçoit la moitié des dégâts.</p>
+<p><strong>Échec</strong> La créature reçoit la totalité des dégâts et elle est repoussée de 1,50 m.</p>
+<p><strong>Échec critique</strong> La créature reçoit le double de dégâts et elle est repoussée de 3 m.</p>
+<hr />
+<p><strong>Intensifié (+1)</strong> Les dégâts augmentent de 1d6 ou de 2d6 si vous utilisez 2 ou 3 actions.</p>
