--- a/data/spells/evocation-03-sxQZ6yqTn0czJxVd.htm
+++ b/data/spells/evocation-03-sxQZ6yqTn0czJxVd.htm
@@ -1,7 +1,6 @@
 Name: Fireball
 Nom: Boule de feu
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A roaring blast of fire appears at a spot you designate, dealing 6d6 fire damage.</p>
@@ -9,5 +8,5 @@ Nom: Boule de feu
 <p><strong>Heightened (+1)</strong> The damage increases by 2d6.</p>
 ------ Description (fr) ------
 <p>Un brasier rugissant apparaît à l’endroit que vous désignez, infligeant 6d6 dégâts de feu.</p>
-<hr>
-<p><strong>Intensifié (+1)</strong> Les dégâts augmentent de 2d6..</p>
+<hr />
+<p><strong>Intensifié (+1)</strong> Les dégâts augmentent de 2d6.</p>
