--- a/data/spell-effects/01-0R42NyuEZMVALjQs.htm
+++ b/data/spell-effects/01-0R42NyuEZMVALjQs.htm
@@ -7,4 +7,4 @@ Nom: Effet : Voyageur en transit (Nage)
 <p>You gain a swim speed equal to your land speed.</p>
 ------ Description (fr) ------
 <p>Accordé par @Compendium[pf2e.spells-srd.LrhTFHUtSS9ahogL]{Voyageur en transit}.</p>
-<p>Vous gagnez une vitesse de nage égale à votre Vitesse terrestre.</p>
+<p>Vous gagnez une Vitesse de nage égale à votre Vitesse terrestre.</p>
