--- a/data/spell-effects/01-N1EM3jRyT8PCG1Py.htm
+++ b/data/spell-effects/01-N1EM3jRyT8PCG1Py.htm
@@ -6,5 +6,5 @@ Nom: Effet : Voyageur en transit (Escalade)
 <p>Granted by @Compendium[pf2e.spells-srd.LrhTFHUtSS9ahogL]{Voyageur en transit}.</p>
 <p>You gain a climb speed equal to your land speed.</p>
 ------ Description (fr) ------
-<p>Accordé par @Compendium[pf2e.spells-srd.LrhTFHUtSS9ahogL]{Traveler's Transit}.</p>
-<p>Vous gagnez une vitesse d'ascension égale à votre vitesse sur terre</p>
+<p>Accordé par @Compendium[pf2e.spells-srd.LrhTFHUtSS9ahogL]{Voyageur en transit}.</p>
+<p>Vous gagnez une Vitesse d'ascension égale à votre Vitesse sur terre</p>
