--- a/data/spell-effects/06-DrNpuMj14wVj4bWF.htm
+++ b/data/spell-effects/06-DrNpuMj14wVj4bWF.htm
@@ -53,7 +53,7 @@ Nom: Effet : Forme de dragon (Cuivre)
 <li><strong>Corps à corps</strong> Mâchoires, <strong> Dégâts</strong> 2d12 perforants plus 2d6 acide</li>
 <li><strong>Melee</strong>  Griffe (agile), <strong>Dégâts</strong> 3d10 tranchant</li>
 <li><strong>Melee</strong> Queue (portée 3 mètres), <strong>Dégâts</strong> 3d10 contondants</li>
-<li><strong>Melee</strong> Aile (portée 3 mètres), <strong>Dégâts</strong> 3d8 matraquage;</li>
+<li><strong>Melee</strong> Aile (portée 3 mètres), <strong>Dégâts</strong> 3d8 condontants</li>
 <li>Souffle : ligne de 18 mètres, [[/r 10d6 #acide]] acide</li>
 </ul>
 <hr />
