--- a/data/spells/evocation-03-Wi2HcreCfujKiCvW.htm
+++ b/data/spells/evocation-03-Wi2HcreCfujKiCvW.htm
@@ -1,13 +1,12 @@
 Name: Whirling Flames
-Nom: Flammes tourbillonantes
-État: changé
-État d'origine: libre
+Nom: Flammes tourbillonnantes
+État: libre
 
 ------ Description (en) ------
 <p>You call forth a storm of whirling flames, engulfing all creatures in that area and dealing 5d6 fire damage with a basic Reflex save.</p>
 <hr />
 <p><strong>Heightened (+2)</strong> The damage increases by 3d6, and you can add another non-overlapping 5-foot burst to the area.</p>
 ------ Description (fr) ------
-<p>Vous invoquez une tempête de flammes tourbillonantes qui engloutit toutes les créatures dans cette zone et qui inflige [[/r 5d6 #feu]] dégâts de feu avec un jet de Réflexes basique.</p>
+<p>Vous invoquez une tempête de flammes tourbillonnantes qui engloutit toutes les créatures dans cette zone et qui inflige [[/r 5d6 #feu]] dégâts de feu avec un jet de Réflexes basique.</p>
 <hr />
 <p><strong>Intensifié (+2)</strong> Les dégâts augmentent de [[/r 3d6 #feu]] et vous pouvez ajouter une autre explosion de 1,5 m qui ne chevauche pas la zone.</p>
