--- a/data/spells/evocation-04-IarZrgCeaiUqOuRu.htm
+++ b/data/spells/evocation-04-IarZrgCeaiUqOuRu.htm
@@ -9,6 +9,6 @@ Nom: Mur de feu
 <p><strong>Heightened (+1)</strong> The fire damage increases by 1d6.</p>
 ------ Description (fr) ------
 <p>Vous élevez un mur flamboyant qui brûle les créatures passant au travers.</p>
-<p>Vous créez soit un mur de flammes de 1,5 m d’épaisseur sur une ligne de 18 m de long et 3 m de haut, ou un cercle de flammes de 1,5 m d’épaisseur, 3 m de rayon et la même hauteur. Le mur est vertical dans les deux cas ; si vous le souhaitez, le mur peut être plus court en longueur et/ou en hauteur. Tout ce qui se trouve de chaque côté du mur est @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{masqué} aux créatures du côté opposé. Toute créature qui franchit le mur ou qui occupe la zone du mur au début de son tour subit 4d6 dégâts de feu.</p>
-<hr>
+<p>Vous créez soit un mur de flammes de 1,5 m d’épaisseur sur une ligne de 18 m de long et 3 m de haut soit un cercle de flammes de 1,5 m d’épaisseur, 3 m de rayon et la même hauteur. Le mur est vertical dans les deux cas ; si vous le souhaitez, le mur peut être plus court en longueur et/ou en hauteur. Tout ce qui se trouve de chaque côté du mur est @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué} aux créatures du côté opposé. Toute créature qui franchit le mur ou qui occupe la zone du mur au début de son tour subit 4d6 dégâts de feu.</p>
+<hr />
 <p><strong>Intensifié (+1)</strong> Les dégâts de feu augmentent de 1d6.</p>
