--- a/data/spells/evocation-05-zoY0fQYTF1NzezTg.htm
+++ b/data/spells/evocation-05-zoY0fQYTF1NzezTg.htm
@@ -1,7 +1,6 @@
 Name: Steal the Sky
 Nom: Voler le ciel
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You make a successful unarmed Strike against a flying creature.</p>
@@ -16,15 +15,14 @@ Nom: Voler le ciel
 <hr />
 <p><strong>Heightened (+1)</strong> Increase the distance the creature must descend by 20 feet.</p>
 ------ Description (fr) ------
-<p>Incantation <span style="font-family: Pathfinder2eActions; font-size: 25.2px; display: inline;">R </span>verbal;</p>
 <p><strong>Déclencheur</strong> Vous portez une Frappe à mains nues contre une créature volante.</p>
 <p><strong>Cible</strong> la créature que vous touchez</p>
-<p><strong>Jet de sauvegarde</strong> Vigueur</p>
 <hr />
 <p>Vous empêchez une créature volante de rester en l'air.</p>
+<hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
 <p><strong>Succès</strong> La cible descend de 18 m. Si elle touche une surface, elle subit des dégâts contondants comme si elle avait chuté.</p>
-<p><strong>Échec</strong> Comme en cas de succès. Si elle touche une surface, elle tombe @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{À terre} et ne peut plus voler, léviter ou prendre l'air pendant 1 minute.</p>
+<p><strong>Échec</strong> Comme en cas de succès. Si elle touche une surface, elle tombe @Compendium[pf2e.conditionitems.j91X7x0XSomq8d60]{À terre} et ne peut plus @Compendium[pf2e.actionspf2e.cS9nfDRGD83bNU1p]{voler}, léviter ou prendre l'air pendant 1 minute.</p>
 <p><strong>Échec critique</strong> Comme en cas d'échec et la créature subit double dégâts en touchant une surface.</p>
 <hr />
-<p><strong>Intensifié (+1)</strong>Augmentez la distance de chute de la créature de 6 m.</p>
+<p><strong>Intensifié (+1)</strong> Augmentez la distance de chute de la créature de 6 m.</p>
