--- a/data/spells/evocation-07-n8eEXXAtguoErW0y.htm
+++ b/data/spells/evocation-07-n8eEXXAtguoErW0y.htm
@@ -1,7 +1,6 @@
 Name: Shadow's Web
 Nom: Toile d'ombre
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Grasping darkness surges from you, dealing [[/r 14d4 #negative]] negative damage. Each creature in the area must attempt a Fortitude save.</p>
@@ -13,7 +12,7 @@ Nom: Toile d'ombre
 <hr />
 <p><strong>Heightened (+1)</strong> The negative damage increases by [[/r 2d4 #negative]].</p>
 ------ Description (fr) ------
-<p>Une noirceur enveloppante surgit de vous, infligeant [[/r 14d4 #négatifs]] dégâts négatifs. Chaque créature dans la zone doit tenterun jet de Vigueur.</p>
+<p>Une noirceur enveloppante surgit de vous, infligeant [[/r 14d4 #négatifs]] dégâts négatifs. Chaque créature dans la zone doit tenter un jet de Vigueur.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
 <p><strong>Succès</strong> La créature subit la moitié des dégâts et est @Compendium[pf2e.conditionspf2e.MIRkyAjyBeXivMa7]{Affaiblie} 1 pendant 1 round.</p>
