--- a/data/spells/illusion-01-xTpp8dHZsNMDm75B.htm
+++ b/data/spells/illusion-01-xTpp8dHZsNMDm75B.htm
@@ -1,7 +1,6 @@
 Name: Splash of Art
 Nom: Avalanche d'art
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A deluge of colorful illusory paint, tools, or other symbols of art and artisanship drift down in the area. Roll 1d4 to determine the color of the illusion. Each creature in the area must attempt a Will save. A creature is unaffected on a success. On a failure or critical failure, the creature takes the results listed on the table relevant to the color.</p>
@@ -45,39 +44,40 @@ Nom: Avalanche d'art
 <p style="box-sizing: border-box; user-select: text; color: #191813; font-size: 13px;"></p>
 ------ Description (fr) ------
 <p>Un déluge de peinture illusoire colorée, d’outils ou d’autres symboles d’art et d’artisanat dérive dans la zone. Lancez 1d4 pour déterminer la couleur de l’illusion. Chaque créature dans la zone doit faire un jet de Volonté. Une créature n’est pas affectée sur un succès. Sur un échec ou un échec critique, la créature subit le résultat listé sur le tableau correspondant à la couleur.</p>
-<h3 style="box-sizing: border-box; user-select: text; color: #191813;"><strong style="box-sizing: border-box; user-select: text;">Avalanche d'art</strong></h3>
-<table style="box-sizing: border-box; user-select: text; width: 372px; color: #191813; font-size: 13px; height: 95px;" border="1">
-<tbody style="box-sizing: border-box; user-select: text;">
-<tr style="box-sizing: border-box; user-select: text; height: 25px;">
-<td style="box-sizing: border-box; user-select: text; color: white; height: 25px; width: 32px; text-align: center; background-color: #522e2c;"><strong style="box-sizing: border-box; user-select: text;">1d4</strong></td>
-<td style="box-sizing: border-box; user-select: text; color: white; width: 70px; text-align: center; background-color: #522e2c; height: 25px;"><strong style="box-sizing: border-box; user-select: text;">Couleur</strong></td>
-<td style="box-sizing: border-box; user-select: text; color: white; width: 135px; text-align: center; background-color: #522e2c; height: 25px;"><strong style="box-sizing: border-box; user-select: text;">Échec</strong></td>
-<td style="box-sizing: border-box; user-select: text; color: white; height: 25px; width: 134px; text-align: center; background-color: #522e2c;"><strong style="box-sizing: border-box; user-select: text;">Échec critique</strong></td>
+<h3>Splash of Art</h3>
+<table class="pf2-table">
+<thead>
+<tr>
+<th>1d4</th>
+<th>Couleur</th>
+<th>Échec</th>
+<th>Échec critique</th>
 </tr>
-<tr style="box-sizing: border-box; user-select: text; height: 17px;">
-<td style="box-sizing: border-box; user-select: text; height: 17px; width: 32px; text-align: center; background-color: #f6f1e1;">1</td>
-<td style="box-sizing: border-box; user-select: text; width: 70px; text-align: center; background-color: #f6f1e1; height: 17px;">Blanc</td>
-<td style="box-sizing: border-box; user-select: text; width: 135px; text-align: center; background-color: #f6f1e1; height: 17px;">@Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Ébloui} 1 round</td>
-<td style="box-sizing: border-box; user-select: text; height: 17px; width: 134px; text-align: center; background-color: #f6f1e1;">Ébloui 1 minute</td>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Blanc</td>
+<td>@Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Éblouie} pendant 1 round</td>
+<td>Éblouie pendant 1 minute</td>
 </tr>
-<tr style="box-sizing: border-box; user-select: text; height: 17px;">
-<td style="box-sizing: border-box; user-select: text; height: 17px; width: 32px; text-align: center; background-color: #eee5c8;">2</td>
-<td style="box-sizing: border-box; user-select: text; width: 70px; text-align: center; background-color: #eee5c8; height: 17px;">Rouge</td>
-<td style="box-sizing: border-box; user-select: text; width: 135px; text-align: center; background-color: #eee5c8; height: 17px;">@Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 1 pendant 1 round</td>
-<td style="box-sizing: border-box; user-select: text; height: 17px; width: 134px; text-align: center; background-color: #eee5c8;">Affaibli 2 pendant 1 round</td>
+<tr>
+<td>2</td>
+<td>Rouge</td>
+<td>@Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaiblie} 1 pendant 1 round</td>
+<td>Affaiblie 2 pendant 1 round</td>
 </tr>
-<tr style="box-sizing: border-box; user-select: text; height: 17px;">
-<td style="box-sizing: border-box; user-select: text; height: 17px; width: 32px; text-align: center; background-color: #f6f1e1;">3</td>
-<td style="box-sizing: border-box; user-select: text; width: 70px; text-align: center; background-color: #f6f1e1; height: 17px;">Jaune</td>
-<td style="box-sizing: border-box; user-select: text; width: 135px; text-align: center; background-color: #f6f1e1; height: 17px;">@Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayée} 1</td>
-<td style="box-sizing: border-box; user-select: text; height: 17px; width: 134px; text-align: center; background-color: #f6f1e1;">Effrayée 2</td>
+<tr>
+<td>3</td>
+<td>Jaune</td>
+<td>@Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayée} 1</td>
+<td>Effrayée 2</td>
 </tr>
-<tr style="box-sizing: border-box; user-select: text; height: 19px;">
-<td style="box-sizing: border-box; user-select: text; height: 19px; width: 32px; text-align: center; background-color: #eee5c8;">4</td>
-<td style="box-sizing: border-box; user-select: text; width: 70px; text-align: center; background-color: #eee5c8; height: 19px;">Bleu</td>
-<td style="box-sizing: border-box; user-select: text; width: 135px; text-align: center; background-color: #eee5c8; height: 19px;">@Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroit} 1 pendant 1 round</td>
-<td style="box-sizing: border-box; user-select: text; height: 19px; width: 134px; text-align: center; background-color: #eee5c8;">Maladroit 2 pendant 1 round</td>
+<tr>
+<td>4</td>
+<td>Bleu</td>
+<td>@Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroit} 1 pendant 1 round</td>
+<td>Maladroit 2 pendant 1 round</td>
 </tr>
 </tbody>
 </table>
-<p style="box-sizing: border-box; user-select: text; color: #191813; font-size: 13px;">&nbsp;</p>
